--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <label><input type="radio" name='wavetype' class='wavetype' value='sine' checked>サイン波</option></label>
     <label><input type="radio" name='wavetype' class='wavetype' value='square'>矩形波</option></label>
     <label><input type="radio" name='wavetype' class='wavetype' value='sawtooth'>鋸歯状波</option></label>
-    <label><input type="radio" name='wavetype' class='wavetype' value='triangle'>三角波</option></label>
+    <label><input type="radio" name='wavetype' class='wavetype' value='triangle'>三角波</option></label><br />
+    Distortion: <input type="range" min="1" max="30" step="1" value='2' id='step'/><br />
     <div id="piano">
 
     </div>
